# flux

./: Cargo.toml  README.md  package-lock.json
deployment/: README.md  package-lock.json  test.sh  validator_key.json
deployment/neardev/default/: blurrrrr.json  flux-protocol1.json  flux-protocol2.json  flux-protocol3.json  flux-test2.json  flux-test3.json  flux-test4.json  flux-test5.json  flux-test6.json  flux_protocol.json  flux_protocol2.json  flux_protocol3.json  flux_protocol4.json  flux_protocol8.json  flux_protocol9.json  flux_protocol_1.json  flux_protocol_2.json  flux_protocol_3.json  flux_protocol_4.json  flux_protocol_5.json  flux_test.json  flux_test2.json  ha.json  hia.json  j12b.json  jappa.json  jasper.json  klopt.json  status_message.json  test0rr.json  testr.json  testrr.json  testrrr.json
deployment/neardev/local/: flux_protocol.json  flux_protocol2.json  flux_protocol3.json  flux_protocol4.json
deployment/neardev/staging/: 142987.json  erwtyus.json  flux_protocol.json  flux_protocol3.json  flux_protocol_3.json  flux_protocol_4.json  flux_protocol_5.json  jop.json  let.json  monkfish.json  shrimp.json  test123321.json
deployment/src/: config.js  index.html
frontend/: package-lock.json  package.json
frontend-redux/: package-lock.json  package.json
frontend-redux/public/: config.js  index.html
frontend-redux/public/lib/: account.js
frontend-redux/src/: constants.js  global-styles.js  index.js
frontend-redux/src/actions/: accountActions.js  authActions.js  marketActions.js  marketsActions.js  nearActions.js
frontend-redux/src/components/: AllowanceIndicator.js  App.js  Authenticate.js  Header.js  (+15 more)
frontend/public/: config.js  flux-logo.sketch  index.html  manifest.json  nearlib.js
frontend/src/: Authenticate.js  constants.js  global-styles.js  index.js  mediaQuery.js
neardev/default/: klopt.json
protocol/: Cargo.toml  README.md  build.sh  new_markets
protocol/neardev/default/: flux-protocol-alpha.json  klopt.json
protocol/res/: flux_protocol.wasm
protocol/src/: binary_market.rs  fungible_token.rs  lib.rs  markets.rs  order.rs  orderbook.rs
protocol/src/binary_market/: mod.rs
protocol/src/markets/: binary_market.rs
protocol/src/markets/binary_market/: mod.rs  orderbook.rs
protocol/src/markets/binary_market/orderbook/: order.rs
src/: binary_market.rs  fungible_token.rs  lib.rs  order.rs  orderbook.rs
(+50 files in other folders)
