[package]
name = "flux-protocol"
version = "0.1.0"
authors = ["jasper de gooijer"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { git = "https://github.com/nearprotocol/json", rev = "1f5779f3b0bd3d2a4b0b975abc46f3d3fe873331", features = ["no_floats"] }
byteorder = "1"
borsh = "0.2.1"
near-bindgen = { path = "./../near-bindgen/near-bindgen"}
wee_alloc = { version = "0.4.5", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"

[features]
default = []
env_test = ["near-bindgen/testing"]

[workspace]
members = []